// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with data 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Order History
  </h1>
  <ul
    className="orderHistoryTable"
  >
    <OrderRow
      order={
        Object {
          "id": 1,
        }
      }
    />
    <OrderRow
      order={
        Object {
          "id": 2,
        }
      }
    />
    <OrderRow
      order={
        Object {
          "id": 3,
        }
      }
    />
  </ul>
</div>
`;

exports[`renders correctly without data 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Order History
  </h1>
  <h3
    className="emptyHistoryMessage"
  >
    You don't have any orders yet.
  </h3>
</div>
`;

exports[`renders full page loading indicator 1`] = `
<div
  className="global"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={64}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="6"
      />
      <line
        x1="12"
        x2="12"
        y1="18"
        y2="22"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="4.93"
        y2="7.76"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="16.24"
        y2="19.07"
      />
      <line
        x1="2"
        x2="6"
        y1="12"
        y2="12"
      />
      <line
        x1="18"
        x2="22"
        y1="12"
        y2="12"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="19.07"
        y2="16.24"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="7.76"
        y2="4.93"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    Fetching Data...
  </span>
</div>
`;
